Fix contact me section h4 margin on small devices

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,6 +1,7 @@
 body{
   font-family: 'Roboto', sans-serif;
   background-color: #f2f2f2 !important;
+  width: auto;
 }
 
 a {
@@ -57,4 +58,8 @@ Index
     #introduction, #education, #skill, #tech {
         height: 75vh;
     }
+}
+
+.row {
+    margin-right: 0;
 }
